Fix layout issues in skills section: remove gap property and adjust bubble transform

--- a/src/app/components/landingpage/my-skills/my-skills.scss
+++ b/src/app/components/landingpage/my-skills/my-skills.scss
@@ -10,7 +10,6 @@
   .icon-skills {
     display: flex;
     flex-wrap: wrap;
-    gap: px;
     margin-left: 70px;
     height: 400px;
 
@@ -57,7 +56,7 @@
 
       .bubble {
         opacity: 0;
-        transform: translate(-20%, -90px); // etwas höher
+        transform: translate(-25%, -70px); 
         z-index: 0;
       }
 
